# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xGyc5A9-eoSQwY9uWud0xGFU248qfwgOTYMvPIupwBbc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1CV4b4zi6Cunw0JOkho3yZujicgtQmpWRt3Wl2lAsKus=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1lB6d9rZn0gHgDXhd1BD_r_tN3eKPSWkqfPVeKH3Rdrs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xZj-RCc8iHdWMIY6CNJh8MUXd1hKjHwvkMHtj_gCXJt4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x1XMt3L5zhdOJsPhpD_z3PHve1cClX9RB6X33KQD7X--Y=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x1VOIGk88wgOqR41LlPNCLdO5GWhXZnODYEQgkPfHGH1w=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1fiX4TTHOc80sU4KP2pPd-hEn7ub_d1C0G0WKyFAcU_k=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT20rBXkeo-THfoT-Eel1lZ_jj_EDoClDrkH_8FvtYYMEk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT22A5syAbOGQCcbgyUwKma8FXycCkmnXKs2bnSnkT5DPo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT23bGsTGEGVdTfzNKqK5Q9EUfFl7LYlFM8_9KCk_DGjpo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2E8Wc4rmY37oqc5v86C0SwNkpJXjCKXneQyhEQ4AH1u4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2Xo1jm6u83DnOIFq94FNHiCsY80rJRVZaF8AX_2WnXMg=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1DV-ZPuneTp7mDtibWG-R6c03lwBFlyDg60vtsE62yZs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1MgbccSmCTdmzF5ObmlgzJz0n74slO7trJk4HeMedeuU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1ZtnXdwPHGNmhxiJ_1HBWyreGR5tC4QTJGcOS4QHUdSE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1aSMfdKqT0EVDV9oWMj5Yuub3PEF5-vzybUXneeuEMZA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1hAE9geYuz65LDaqMstU8u1KONQgKvseSu9YUHmkhF38=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1xvzSmHvNoln0cCvoSgZZ_L3eR73ccfNZ0-RBrvRSiHg=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x1zAdAu15-ahL9ci9mHpxTQhdWorojxguraL_4QSVUgIo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x644UZPWY_6o2kNiqpwsESlUjFVTJs2SYxY59BN7-FA-Nk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64mKyc6-5UOo_BvNevL6rvFzSVfbmDszj1KNQbI4F_CMA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x11TiRevB7omyz-x14KeV_Fy6YQDt2YZRi_IMF0ltgF18=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x141Mc74sKFjUS4cZL-54Yc-Ndv_H2D5BUwMz4j3Fi148=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1A4GSNTyk3On70no_tTsV562Nqmnz76ystFlMd7m9YVs=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2P6l8Je4-mEzI7FhVHd9SvpLp-8tpZ_cVyNuopGkqorE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2Y3bPEzyQcpgxBEn7C0x3rnZweIdrCa6lPOjB-AW4NSo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT35xw4EJ6l070PjlKM2iqujqaDYbONEgyXg7H4pMX8SHI=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32DOSOzoenkvhA5sO1Mc8QAtOH6fjzTzpGfyU3vIbqDSU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32iFA6VQTqj_kK-4zONOKCbFPCwW-RQd82TgnuRrVUpfU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32jzNjD9SvQGvHwmnMRdc3t-TwpMUkMi168yohPr2BtJI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI32jAktZedwFTBHZX-afaFKPHWZ5Z_evNQPcudkOpZ2do4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32x3DSQ_XCfrA5mjcb4FecM-f0T0vtXrYaf9wF_R5P-DsE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xFYWzrEVLkkZfvvMlg_Qf11kn4JUb5Axnd44pVhkK2pY=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1-5I2aSg-eYZInCiO7lVHY6ufR_rkrgVAJOjXF0woDWE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT12VOkpJ3wO6mPBziYdmEIhEGBK4LDGdkUCHTUUaJSaF8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT15AAQ_x0FNNVI3PJ2UDDhm1uia-6955HCrX01wGKwY_E=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1N6BXAZ_a03go2fqA19hPUurOoaxBjRd4AjoHsFeoQrk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1Uafy6AizyJcckKUz_8kvrHITgts5F7Zhirsgq7xOYkw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1aySkk6jJs8V7a1-PB04T-ji3MebrLLtMIKyFUfekK50=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1Elkwq5GR9BPx2SQmRwQX7WwIJQCmqnaJgLTcQHAgceI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1nthQFWoTPmRbuIzrt9AsBnOgSDw-PBuchdpOBGe6Agg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3fgR5FDaKsCa_OxC4eqhp6xTHYZJJOpmMBn3reG8hFEk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3lQb6it2232mSApEKkWlBIBZWy_Z2gbVtufOSEYaEa4M=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4dmgtZpenO2HuBPWWgpXJHiEBTvbBWojCHRY_FEX9RXE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4qQAcq5IGNJDvcJnh1YMzrvmfeo3PEXC3qCyBKH1oOEM=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16sEdABFuNqMZERHrPJSdu-FBtXjW2dLypYkqMx4WfNjA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x163U2EFNfeey8ivNMoyDVGm6_dhR0nDK2TSwzdqePG1ZU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16pss-W_tFxztL74bq3vNdjRSy3HT4O8FVs5fBLpKxRJ8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16X2BNsytj9g_vjeecbvoYOCiZq5HlTeYYXM5bsBr_DDg=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x1604jHj_G04qxnMWryEDEXxdgEP3CrJvjI2kOhft1gCIQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16d010BXyVu635Z82FEuf8EjsZ_OKZ2uLvIR94fMIVCWA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16fLhn_G6jTaQmnOUEteFsMdlGPMILk_jZzNYmMCPp7Ds=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16KHY_xjYHAvqUBFGh8Xw54_9Sbja2FBiC0TYCVx__TTI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x16w-lPvq9t2leJzHfwwDSIkggqdpYUh3aDb-7zZ70gJno=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16eY8DuDw7DzcNv9-i4Zso-KjJVjdY_y7bHJnOUqf7WQE=',
      'err': 0,
    }),
  ])
# ---
